fixed container padding on smaller screens

--- a/src/routes/+page.css
+++ b/src/routes/+page.css
@@ -45,8 +45,8 @@ body {
   align-items: center;
   position: relative;
   overflow: hidden;
-  padding-right: 25px;
-  padding-left: 25px;
+  padding-right: 3%;
+  padding-left: 3%;
 }
 
 .image-wrapper {
